k8s/db.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata: 
  name: db
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
  serviceName: db
  replicas: 1
  template:
    metadata:
      labels: 
        app: db
    spec: 
      containers: 
        - name: db
          image: postgres:13.0-alpine
          ports:
          - containerPort: 5432
          resources:
            requests:
              memory: 32Mi
              cpu: 200m
            limits:
              memory: 64Mi
              cpu: 500m              
          volumeMounts:
            - name: config
              mountPath: "/docker-entrypoint-initdb.d/"
              readOnly: true
            - name: postgres-data-temp
              mountPath: "/data"
          readinessProbe:
            exec:
              command:
              - pg_isready
            initialDelaySeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            exec:
              command:
              - pg_isready
            initialDelaySeconds: 45
            timeoutSeconds: 2
      volumes:
        - name: config
          configMap:
            name: config-postgres
            items:
            - key: "create_table.sql"
              path: "create_table.sql"    
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - db
            topologyKey: "kubernetes.io/hostname"
  volumeClaimTemplates:
  - metadata:
      name: postgres-data-temp
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: "standard-rwo"
      resources:
        requests:
          storage: 2G
---
apiVersion: v1
kind: Service
metadata:
  name: db-headless
spec:
  selector:
    app: db
  ports: 
  - protocol: TCP
    port: 5432
    targetPort: 5432 
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports: 
  - protocol: TCP
    port: 5432
    targetPort: 5432
